--- a/package.json
+++ b/package.json
@@ -3,10 +3,15 @@
   "version": "0.2.0",
   "private": true,
   "dependencies": {
+    "axios": "^0.20.0",
+    "bootstrap": "^4.5.3",
     "cors": "^2.8.4",
     "react": "^16.10.2",
+    "react-bootstrap": "^1.3.0",
     "react-dom": "^16.10.2",
-    "react-scripts": "^3.4.3"
+    "react-icons": "^3.11.0",
+    "react-scripts": "^3.4.3",
+    "reactjs-popup": "^2.0.4"
   },
   "scripts": {
     "start": "react-scripts start",
